# mcp

./: .gitignore  claude_desktop_config_example.json  install_mcp_inspector.md  langchain_client.py  main.py  pyproject.toml  test.py
.cursor/: mcp.json
servers/: math_server.py  weather_server.py
